kube/base/paste/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paste
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    spec:
      containers:
        - name: paste
          image: docker.seankhliao.com/paste:latest
          args:
            - -data=/data
          env: []
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /data
              name: data
      enableServiceLinks: false
      serviceAccountName: paste
      terminationGracePeriodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paste
